@@ -1,3 +1,13 @@
+2013-01-31  David Farler  <dfarler@apple.com>
+
+        Provide a sensible default architecture when building on iOS SDKs
+        https://bugs.webkit.org/show_bug.cgi?id=108395
+
+        Reviewed by Anders Carlsson.
+
+        * Scripts/webkitdirs.pm:
+        (determineArchitecture): Anchor SDK regex matches at the beginning.
+
 2013-01-31  Ryosuke Niwa  <rniwa@webkit.org>
 
         buildbot should not rely on webkitpy
